@@ -230,6 +230,94 @@ public class QualityControlStateUpdaterNGTest {
         // check equality of the rules
         assertEquals(registeredRules, expectedRegisteredRules);
     }
+    
+    @Test
+    public void testReadSelectedNodesWithDisabledRules() throws Exception {
+        System.out.println("read Selected Nodes With Disabled Rules");
+
+        graph = new DualGraph(SchemaFactoryUtilities.getSchemaFactory(VisualSchemaFactory.VISUAL_SCHEMA_ID).createSchema());
+        WritableGraph wg = graph.getWritableGraph("Add Elements", true);
+        try {
+            // Add X,Y,Z vertex attributes
+            attrX = VisualConcept.VertexAttribute.X.ensure(wg);
+            attrY = VisualConcept.VertexAttribute.Y.ensure(wg);
+            attrZ = VisualConcept.VertexAttribute.Z.ensure(wg);
+
+            // Add vertex and transaction SELECTED attributes
+            vSelectedAttrId = VisualConcept.VertexAttribute.SELECTED.ensure(wg);
+            tSelectedAttrId = VisualConcept.TransactionAttribute.SELECTED.ensure(wg);
+
+            // Add two vertices
+            vxId1 = wg.addVertex();
+            vxId2 = wg.addVertex();
+
+            // Add one transaction between the two vertices
+            txId1 = wg.addTransaction(vxId1, vxId2, false);
+
+            wg.setFloatValue(attrX, vxId1, 1.0f);
+            wg.setFloatValue(attrY, vxId1, 1.0f);
+            wg.setBooleanValue(vSelectedAttrId, vxId1, false);
+
+            wg.setFloatValue(attrX, vxId2, 2.0f);
+            wg.setFloatValue(attrY, vxId2, 2.0f);
+            wg.setBooleanValue(vSelectedAttrId, vxId1, true);
+
+            // Add vertex IDENTIFIER attribute and label each vertice.
+            vxIdentifierAttrId = VisualConcept.VertexAttribute.IDENTIFIER.ensure(wg);
+            wg.setStringValue(vxIdentifierAttrId, vxId1, "Vertex1");
+            wg.setStringValue(vxIdentifierAttrId, vxId2, "Vertex2");
+
+            // Add vertex TYPE attribute and set each type to unknown
+            typeAttrId = AnalyticConcept.VertexAttribute.TYPE.ensure(wg);
+            wg.setObjectValue(typeAttrId, vxId1, SchemaVertexType.unknownType());
+            wg.setObjectValue(typeAttrId, vxId2, SchemaVertexType.unknownType());
+
+        } finally {
+            wg.commit();
+        }
+
+        // Expected rules
+        final List<QualityControlRule> expectedRegisteredRules = new ArrayList<>(Lookup.getDefault().lookupAll(QualityControlRule.class));
+
+        // Disable all the rules
+        for (final QualityControlRule rule : expectedRegisteredRules) {
+            rule.setEnabled(false);
+        }
+
+        final List<QualityControlEvent> expectedQualityControlEvents = new ArrayList<>();
+        expectedQualityControlEvents.add(new QualityControlEvent(0, "Vertex1", SchemaVertexType.unknownType(), Collections.emptyList()));
+
+        // Call update state to trigger checking of rules
+        PluginExecution.withPlugin(new QualityControlStateUpdater()).executeNow(graph);
+
+        // get the state and events
+        final QualityControlState state = QualityControlAutoVetter.getInstance().getQualityControlState();
+        final List<QualityControlEvent> qualityControlEvents = state.getQualityControlEvents();
+        final List<QualityControlRule> registeredRules = state.getRegisteredRules();
+
+        // Loop all events and check equality for each item specifically. Testing equality of the list was taken literally.
+        assertEquals(qualityControlEvents.size(), expectedQualityControlEvents.size());
+        int i = 0;
+        for (QualityControlEvent event : expectedQualityControlEvents) {
+            if (qualityControlEvents.size() >= i) {
+                assertEquals(qualityControlEvents.get(i).getReasons(), event.getReasons());
+                assertEquals(qualityControlEvents.get(i).getQuality(), event.getQuality());
+                assertEquals(qualityControlEvents.get(i).getVertex(), event.getVertex());
+                assertEquals(qualityControlEvents.get(i).getRules(), event.getRules());
+                assertEquals(qualityControlEvents.get(i).getType(), event.getType());
+            }
+            i++;
+        }
+
+        // check equality of the rules
+        // since all the rules have been disabled, this should be empty
+        assertEquals(registeredRules, Collections.emptyList());
+        
+        // Enable all the rules again to clean up
+        for (final QualityControlRule rule : expectedRegisteredRules) {
+            rule.setEnabled(true);
+        }
+    }
 
     /**
      * Test of getName method, of class QualityControlStateUpdater.
